Update description method
